workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__shape__test__can_handle_set_base_shape_command__new_events.snap
---
source: workspaces/optic-engine-native/src/commands/shape.rs
expression: new_events
---
[
    BaseShapeSet(
        BaseShapeSet {
            shape_id: "shape_1",
            base_shape_id: "$number",
            event_context: None,
        },
    ),
]
