workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__shape__test__can_handle_set_base_shape_command__setting_base_shape_result.snap
---
source: workspaces/optic-engine-native/src/commands/shape.rs
expression: setting_base_shape_result.unwrap_err()
---
Validation(
    "Command failed validation: shape must not be base shape to set base shape, \"SetBaseShape(SetBaseShape { shape_id: \\\"$string\\\", base_shape_id: \\\"$number\\\" })\"",
)
