workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__shape__test__can_handle_set_base_shape_command__unexisting_shape_result.snap
---
source: workspaces/optic-engine-native/src/commands/shape.rs
expression: unexisting_shape_result.unwrap_err()
---
Validation(
    "Command failed validation: shape must exist to set base shape, \"SetBaseShape(SetBaseShape { shape_id: \\\"not-a-shape\\\", base_shape_id: \\\"$number\\\" })\"",
)
